--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -17,4 +17,4 @@ jobs:
           server: ftp.liqatech.com
           username: ${{ secrets.ftp_username}}
           password: ${{ secrets.ftp_password }}
-          server-dir: /public_html/
+          server-dir: public_html/
